[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/tres_folder/regular_fonts.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/logos/tesltatech_logo.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/components/footer.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/components/minicomponents/footer_link_button.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.145098, 0.160784, 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="FooterPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 0.427
margin_bottom = -0.159973
rect_min_size = Vector2( 1280, 461 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
game_link_button = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 461.0
custom_constants/margin_right = 50
custom_constants/margin_top = 70
custom_constants/margin_left = 50

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 70.0
margin_right = 1230.0
margin_bottom = 461.0
custom_constants/separation = 50

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer/ContentVBox"]
margin_right = 1180.0
margin_bottom = 139.0
custom_constants/separation = 120

[node name="OfficeInfoVBox" type="VBoxContainer" parent="MarginContainer/ContentVBox/MainHBox"]
margin_right = 116.0
margin_bottom = 139.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/ContentVBox/MainHBox/OfficeInfoVBox"]
margin_right = 116.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Office Info"

[node name="CompanyLogo" type="TextureRect" parent="MarginContainer/ContentVBox/MainHBox/OfficeInfoVBox"]
margin_top = 49.0
margin_right = 116.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 90 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ProductsVBox" type="VBoxContainer" parent="MarginContainer/ContentVBox/MainHBox"]
margin_left = 236.0
margin_right = 379.0
margin_bottom = 139.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/ContentVBox/MainHBox/ProductsVBox"]
margin_right = 143.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Our Products"

[node name="JoinUsVBox" type="VBoxContainer" parent="MarginContainer/ContentVBox/MainHBox"]
margin_left = 499.0
margin_right = 579.0
margin_bottom = 139.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/ContentVBox/MainHBox/JoinUsVBox"]
margin_right = 80.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Join Us"

[node name="FollowUsVBox" type="VBoxContainer" parent="MarginContainer/ContentVBox/MainHBox"]
margin_left = 699.0
margin_right = 804.0
margin_bottom = 139.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/ContentVBox/MainHBox/FollowUsVBox"]
margin_right = 105.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Follow Us"

[node name="BottomHBox" type="HBoxContainer" parent="MarginContainer/ContentVBox"]
margin_top = 189.0
margin_right = 1180.0
margin_bottom = 210.0
custom_constants/separation = 550

[node name="Label" type="Label" parent="MarginContainer/ContentVBox/BottomHBox"]
margin_right = 353.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Â© 2024 Copyright Teslatech. All right reserved."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ContentVBox/BottomHBox"]
margin_left = 903.0
margin_right = 1135.0
margin_bottom = 21.0

[node name="TermsLinkButton" type="LinkButton" parent="MarginContainer/ContentVBox/BottomHBox/HBoxContainer"]
margin_right = 165.0
margin_bottom = 21.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.811765, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Terms and conditions"
underline = 2

[node name="Label" type="Label" parent="MarginContainer/ContentVBox/BottomHBox/HBoxContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "|"

[node name="PrivacyLinkButton" type="LinkButton" parent="MarginContainer/ContentVBox/BottomHBox/HBoxContainer"]
margin_left = 177.0
margin_right = 232.0
margin_bottom = 21.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.811765, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Privacy"
underline = 2
